--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -63,24 +63,24 @@
     "modelo3d__modelo16_titulo":"Filmoteca de Valencia",
     "modelo3d__modelo17_titulo":"",
     "modelo3d__modelo18_titulo":"",
-    "modelo3d__modelo1_descripcion":"",
-    "modelo3d__modelo2_descripcion":"",
-    "modelo3d__modelo3_descripcion":"",
-    "modelo3d__modelo4_descripcion":"",
-    "modelo3d__modelo5_descripcion":"",
-    "modelo3d__modelo6_descripcion":"",
-    "modelo3d__modelo7_descripcion":"",
-    "modelo3d__modelo8_descripcion":"",
-    "modelo3d__modelo9_descripcion":"",
-    "modelo3d__modelo10_descripcion":"",
-    "modelo3d__modelo11_descripcion":"",
-    "modelo3d__modelo12_descripcion":"",
-    "modelo3d__modelo13_descripcion":"",
-    "modelo3d__modelo14_descripcion":"",
-    "modelo3d__modelo15_descripcion":"",
-    "modelo3d__modelo16_descripcion":"",
-    "modelo3d__modelo17_descripcion":"",
-    "modelo3d__modelo18_descripcion":"",
+    "modelo3d__modelo1_descripcion":"Modelo 3D del Monumento Principal de la Falla creado para esta experiencia ",
+    "modelo3d__modelo2_descripcion":"Modelo 3D del muñeco representativo de Codethon-Artemis Club",
+    "modelo3d__modelo3_descripcion":"Modelo 3D del Ayuntamiento de Valencia",
+    "modelo3d__modelo4_descripcion":"Modelo 3D de las farolas presentes por toda la Ciudad de Valencia",
+    "modelo3d__modelo5_descripcion":"Modelo 3D de un aerógrafo para pintar los muñecos en el taller",
+    "modelo3d__modelo6_descripcion":"Modelo 3D de los bancos de la Plaza del Ayuntamiento de Valencia",
+    "modelo3d__modelo7_descripcion":"Modelo 3D de un atril, donde se situa el libro que cuenta la historia de Memòries en Cendra",
+    "modelo3d__modelo8_descripcion":"Modelo 3D de un grupo de cajas que decoran el Taller Fallero",
+    "modelo3d__modelo9_descripcion":"Modelo 3D de una carretilla para transportar palets, representativa de la maquinaria que puede existir en un Taller Fallero",
+    "modelo3d__modelo10_descripcion":"Modelo 3D ",
+    "modelo3d__modelo11_descripcion":"Modelo 3D de una escalera, representativa algunos de los elementos claves en un Taller Fallero",
+    "modelo3d__modelo12_descripcion":"Modelo 3D de la Fuente de la Plaza del Ayuntamiento de Valencia",
+    "modelo3d__modelo13_descripcion":"Modelo 3D de un andamio, representativo de algunos de los elementos clave en un Taller Fallero",
+    "modelo3d__modelo14_descripcion":"Modelo 3D de una reinterpretación de uno de los edificios de la Plaza del Ayuntamiento de Valencia",
+    "modelo3d__modelo15_descripcion":"Modelo 3D de una reinterpretación de uno de los edificios de la Plaza del Ayuntamiento de Valencia",
+    "modelo3d__modelo16_descripcion":"Modelo 3D de la Filmoteca de Valencia/Teatro Rialto en la Plaza del Ayuntamiento",
+    "modelo3d__modelo17_descripcion":" ",
+    "modelo3d__modelo18_descripcion":" ",
     "accesibilidad__titulo":"Accesibilidad y SmartCity",
     "accesibilidad__left_titulo":"Accesibilidad",
     "accesibilidad__right_titulo":"Valencia SmartCity",
