--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -63,22 +63,22 @@
     "modelo3d__modelo16_titulo":"Filmoteca de València",
     "modelo3d__modelo17_titulo":"",
     "modelo3d__modelo18_titulo":"",
-    "modelo3d__modelo1_descripcion":"",
-    "modelo3d__modelo2_descripcion":"",
-    "modelo3d__modelo3_descripcion":"",
-    "modelo3d__modelo4_descripcion":"",
-    "modelo3d__modelo5_descripcion":"",
-    "modelo3d__modelo6_descripcion":"",
-    "modelo3d__modelo7_descripcion":"",
-    "modelo3d__modelo8_descripcion":"",
-    "modelo3d__modelo9_descripcion":"",
-    "modelo3d__modelo10_descripcion":"",
-    "modelo3d__modelo11_descripcion":"",
-    "modelo3d__modelo12_descripcion":"",
-    "modelo3d__modelo13_descripcion":"",
-    "modelo3d__modelo14_descripcion":"",
-    "modelo3d__modelo15_descripcion":"",
-    "modelo3d__modelo16_descripcion":"",
+    "modelo3d__modelo1_descripcion":"Model 3D del Monument Principal de la Falla creat per a aquesta experiència ",
+    "modelo3d__modelo2_descripcion":"Model 3D del ninot representatiu del Codethon-Artemis Club",
+    "modelo3d__modelo3_descripcion":"Model 3D de l'Ajuntament de València",
+    "modelo3d__modelo4_descripcion":"Model 3D de les faroles presents per tota la Ciutat de València",
+    "modelo3d__modelo5_descripcion":"Model 3D d'un aerògraf per a pintar els ninots al taller",
+    "modelo3d__modelo6_descripcion":"Model 3D dels bancs de la Plaça de l'Ajuntament de València",
+    "modelo3d__modelo7_descripcion":"Model 3D d'un atril, on es situa el llibre que conta la història de Memòries en Cendra",
+    "modelo3d__modelo8_descripcion":"Model 3D d'un grup de caixes que decoren el Taller Fallero",
+    "modelo3d__modelo9_descripcion":"Model 3D d'una carretilla per transportar palets, representativa de la maquinària que pot existir a un Taller Faller",
+    "modelo3d__modelo10_descripcion":"Model 3D ",
+    "modelo3d__modelo11_descripcion":"Model 3D d'una escala, representativa d'alguns dels elements clau en un Taller Faller",
+    "modelo3d__modelo12_descripcion":"Model 3D de la Font de la Plaça de l'Ajuntament de València",
+    "modelo3d__modelo13_descripcion":"Model 3D d'un andami, representatiu d'alguns dels elements clau en un Taller Faller",
+    "modelo3d__modelo14_descripcion":"Model 3D d'una reinterpretación d'un dels edificis de la Plaça de l'Ajuntament de València",
+    "modelo3d__modelo15_descripcion":"Model 3D d'una reinterpretación d'un dels edificis de la Plaça de l'Ajuntament de València",
+    "modelo3d__modelo16_descripcion":"Model 3D de la Filmoteca de València/Teatre Rialto en la Plaça de l'Ajuntament",
     "modelo3d__modelo17_descripcion":"",
     "modelo3d__modelo18_descripcion":"",
     "accesibilidad__titulo":"Accessibilitat i SmartCity",
