--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -34,12 +34,11 @@
     "enfoqueSAS__titulo":"Enfoque S.A.S: ", 
     "enfoqueSAS__subtitulo":"Sostenibilidad, Accesibilidad y SmartCity", 
     "enfoqueSAS__sostenibilidad_titulo":"Fomentamos la sostenibilidad",
-    "enfoqueSAS__sostenibilidad_p1":"Este proyecto representa una medida sostenible que busca preservar y difundir esta valiosa tradición cultural reduciendo el impacto medioambietal. Desde la promoción turística, que permite a los usuarios sumergirse completamente en el ambiente sin la necesidad de malgastar material recreando la creación y quema fisicamente, pasando por el ámbito educativo  ",
-    "enfoqueSAS__sostenibilidad_p0":"Nuestro objetivo es reducir el impacto medioambiental, especialmente en entornos educativos. En los colegios se suele replicar la creación y quema de una falla para que los jóvenes vivan la experiencia y aprendan sobre esta tradición desde la escuela.",
-    "enfoqueSAS__sostenibilidad_p2":"Memòries en Cendra busca crear una experiencia que acerque las Fallas al público y fomente su amor por la festividad, al mismo tiempo que aprenden sobre esta tradición y se promueven prácticas ambientales responsables",
+    "enfoqueSAS__sostenibilidad_p1":"Este proyecto no solo busca ofrecer una experiencia inmersiva y emocionante, sino que también se fundamenta en principios de sostenibilidad que lo hacen respetuoso con el medio ambiente. Gracias a este proyecto, se evita la necesidad de construir elementos físicos para ambientes en los que se quiera difundir la fiesta como colegios o ferias de turismo, lo que reduce significativamente la generación de residuos y el consumo de recursos naturales.",
+    "enfoqueSAS__sostenibilidad_p2":"Memòries en Cendra demuestra que es posible celebrar y preservar tradiciones culturales de manera responsable y respetuosa con el medio ambiente.",
     "enfoqueSAS__accesibilidad_titulo":"Apostamos por la accesibilidad",
-    "enfoqueSAS__accesibilidad_p2":"Estas elementos nos permiten también que este proyecto pueda ser disfrutado por aquellas personas que tengan restricciones en alguno de estos sentidos",
-    "enfoqueSAS__accesibilidad_p1":"Actualmente los jóvenes están más familiarizados con la tecnología y tienen una mayor facilidad para interactuar con ella. Por ello, queremos garantizar que las personas mayores, que pueden no estar tan familiarizadas con estas formas de interacción, puedan participar de manera igualmente sencilla. Mediante instrucciones visuales y auditivas para facilitar su experiencia y minimizar las frustraciones. ",
+    "enfoqueSAS__accesibilidad_p2":"La accesibilidad ha sido una prioridad clave en el desarrollo de este proyecto y seguimos en vias de conseguir que la mayor cantidad de gente pueda disfrutar de esta experiencia., ",
+    "enfoqueSAS__accesibilidad_p1":"Además de ser un proyecto respetuoso con el medio ambiente se trata de una iniciativa socialmente responsable. Desde una perspectiva social, este proyecto promueve la inclusión al ofrecer una experiencia accesible para personas de todas las edades y capacidades. La implementación instrucciones tanto auditivas como escritas garantiza que los usuarios, independientemente de sus habilidades físicas o cognitivas, puedan disfrutar de la experiencia de manera equitativa.",
     "enfoqueSAS__smartcity_titulo":"Convertimos Valencia en una ciudad más inteligente",
     "enfoqueSAS__smartcity_p1":"Este proyecto impulsa la innovación tecnológica en Valencia, atrayendo talento y empresas relacionadas con la realidad virtual, la realidad aumentada y otras tecnologías emergentes. De esta forma se contribuye al desarrollo económico y al posicionamiento de Valencia como un centro de innovación.",
     "enfoqueSAS__smartcity_p2":"A través de esta experiencia inmersiva se permite a los turistas explorar las Fallas desde cualquier parte del mundo. Esto no solo promueve el turismo, sino que también puede ayudar a gestionar el flujo de visitantes de manera más eficiente.",
@@ -92,5 +91,31 @@
     "sobre_nosotros__titulo" : "Sobre nosotros", 
     "sobre_nosotros__subtitulo" : "El equipo de 'Memòries en Cendra' está compuesto por estudiantes de Ingeniera Informática y estudiantes del Màster de Tecnologias Interactivas y Fabricación Digital",
     "sobre_nosotros__informatica_descripcion":"Funcionalidad en Unity mediante Scripts y Desarrollo de esta 'Landing Page'", 
-    "descripcion_modelo_falla":"Esta es la falla principal del joc" 
+    "sobre_nosotros__informatica_titulo":"Ingeniería Informática",
+    "sobre_nosotros__ifab_titulo":"Tecnologías Interactivas y Fabricación Digital",
+    "sobre_nosotros__ifab_descripcion":"",
+    "sobre_nosotros__joel_formacion":"Grado Superior en Desarrollo Aplicaciones Web, Cursando Ingeniería Informática UPV", 
+    "sobre_nosotros__celia_formacion":"Cursando Ingeniería Informática UPV",
+    "sobre_nosotros__alba_formacion":"Bellas Artes, Cursando Master Tecnologías Interactivas y Fabricación Digital",
+    "sobre_nosotros__mar_formacion":"Bellas Artes, Cursando Master Tecnologías Interactivas y Fabricación Digital", 
+    "sobre_nosotros__maria_formacion":"Bellas Artes, Cursando Master Tecnologías Interactivas y Fabricación Digital",
+    "FAQ__titulo":"Preguntas frecuentes", 
+    "FAQ__subtitulo":"", 
+    "FAQ__pregunta1":"¿Cómo surge la idea de crear una experiencia de realidad virtual sobre las Fallas?",
+    "FAQ__respuesta1":"La idea de crear una experiencia de realidad virtual sobre las Fallas de Valencia surge de la voluntad de preservar y promover esta festividad única en el mundo mediante la tecnología inmersiva a la vez que se reduce el impacto negativo de algunos ámbitos relacionados con la difusión de esta tradición.",
+    "FAQ__pregunta2":"¿Cuál es el objetivo de este proyecto de realidad virtual?",
+    "FAQ__respuesta2":"El objetivo principal de este proyecto de realidad virtual es ofrecer una experiencia inmersiva y auténtica de las Fallas de Valencia, permitiendo a los usuarios participar de la fiesta, aprender sobre ella y los procesos ques supone y sumergirse en la cultura y la tradición de esta celebración tan especial.",
+    "FAQ__pregunta3":"¿Quiénes pueden disfrutar de esta experiencia de realidad virtual?", 
+    "FAQ__respuesta3":"Esta experiencia de realidad virtual está diseñada para que pueda ser disfrutada por  la mayor cantidad de personas posibles que esten interesadas en las Fallas de Valencia, ya sea que vivan en la ciudad, en otra parte de España o en cualquier lugar del mundo. Desde los más jóvenes hasta los mayores y personas con ciertos problemas de accesibilidad pueden disfrutar de esta experiencia única.",
+    "FAQ__pregunta4":"¿Cuál es el alcance futuro de este proyecto?", 
+    "FAQ__respuesta4":"El alcance futuro de este proyecto incluye la expansión de la experiencia para abarcar más aspectos de las Fallas, como la inclusión de más monumentos, eventos y actividades relacionadas e incluso, porqué no la recreación de otras festividades tipicas. Además, se planea seguir mejorando la calidad gráfica y la interactividad para ofrecer una experiencia cada vez más inmersiva y emocionante.",
+    "FAQ__pregunta5":"¿Se planea ofrecer esta experiencia en otras lenguas además del valenciano?",
+    "FAQ__respuesta5":"Sí, se tiene previsto ofrecer esta experiencia de realidad virtual en varais lenguas además del valenciano, con el fin de hacerla accesible para una audiencia global y permitir que personas de diferentes culturas y nacionalidades puedan disfrutar de las Fallas de Valencia.",
+    "FAQ__pregunta6":"¿Qué medidas de accesibilidad se han implementado para garantizar que esta experiencia sea inclusiva para todos los usuarios?", 
+    "FAQ__respuesta6":"Se han implementado diversas medidas de accesibilidad como la utilización de instrucciones tanto escritas como en audio para adaptarse a las necesidades de diferentes usuarios",
+    "FAQ__pregunta7":"¿El juego ya está terminado?", 
+    "FAQ__respuesta7":"Actualmente, el juego está en proceso de desarrollo y se está trabajando activamente en su creación para ofrecer una experiencia de alta calidad que capture la esencia y la magia de las Fallas de Valencia.",
+    "FAQ__pregunta8":"¿Dónde puedo acceder a esta experiencia de realidad virtual?",
+    "FAQ__respuesta8":"Acutalmente el juego no está publicado ya que se encuentra en fase de desarrollo"
+
 }   
