--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -33,16 +33,15 @@
     "sobre_proyecto__boton":"Més informació", 
     "enfoqueSAS__titulo":"Enfocament S.A.S: ", 
     "enfoqueSAS__subtitulo":"Sostenibilitat, Accesibilitat i SmartCity", 
-    "enfoqueSAS__sostenibilidad_p1":"Este proyecto representa una medida sostenible que busca preservar y difundir esta valiosa tradición cultural reduciendo el impacto medioambietal. Desde la promoción turística, que permite a los usuarios sumergirse completamente en el ambiente sin la necesidad de malgastar material recreando la creación y quema fisicamente, como  ",
-    "enfoqueSAS__sostenibilidad_p0":"Nuestro objetivo es reducir el impacto medioambiental, especialmente en entornos educativos. Históricamente, la celebración de las Fallas ha implicado la quema de una falla, una práctica arraigada en nuestra cultura. En los colegios se suele replicar este acto para que los jóvenes vivan la experiencia desde la escuela.",
-    "enfoqueSAS__sostenibilidad_p2":"Memòries en Cendra busca crear una experiencia que acerque las Fallas al público y fomente su amor por la festividad, al mismo tiempo que al mismo tiempo que aprenden sobre esta tradición y se promueven prácticas ambientales responsables",
-    "enfoqueSAS__accesibilidad_p2":"Nos hemos esforzado por hacer que este proyecto pueda ser disfrutado por el mayor número posible de personas, incluyendo indicaciones tanto visuales como auditivas para aquellas personas que puedan tener restricciones en alguno de de estos sentidos",
-    "enfoqueSAS__accesibilidad_p1":"Actualment la gent jove está més familiaritzada amb la tecnologia i tenen una major facilitat per interactuar amb ella. Per això, volem garantitzar que les persones majors, que poden no estar tan familiaritzades amb aquestes formes d'interacció, puguen participar de forma igualment sencilla mitjançant instruccions visuals i auditives per facilitar la seua experiència i minimitzar les frustracions.",
-    "enfoqueSAS__smartcity_p1":"Aquest projecte impulsa la innovació tecnològica en València, atraent talent i empreses relacionades amb la realitat virtual, la realidad aumentada y otras tecnologías emergentes. De esta forma se contribuye al desarrollo económico y al posicionamiento de Valencia como un centro de innovación.",
-    "enfoqueSAS__smartcity_p2":"A través de esta experiencia inmersiva se permite a los turistas explorar las Fallas desde cualquier parte del mundo. Esto no solo promueve el turismo, sino que también puede ayudar a gestionar el flujo de visitantes de manera más eficiente.",
+    "enfoqueSAS__sostenibilidad_p1":"Aquest projecte no sols busca oferir una experiència immersiva i emocionant, sinó que també es fonamenta en principis de sostenibilitat que el fan respectuós amb el medi ambient. Gràcies a aquest projecte, s'evita la necessitat de construir elements físics per a entorns en els quals es vulga difondre la festa com ara escoles o fires de turisme, la qual cosa redueix significativament la generació de residus i el consum de recursos naturals.",
+    "enfoqueSAS__sostenibilidad_p2":"Memòries en Cendra demostra que és possible celebrar i preservar les tradicions culturals de manera responsable i respectuosa amb el medi ambient.",
+    "enfoqueSAS__accesibilidad_p2":"L'accessibilitat ha sigut una prioritat clau en el desenvolupament d'aquest projecte i continuem en camí d'aconseguir que la major quantitat de gent puga gaudir d'aquesta experiència",
+    "enfoqueSAS__accesibilidad_p1":"A més de ser un projecte respectuós amb el medi ambient, es tracta d'una iniciativa socialment responsable. Des d'una perspectiva social, aquest projecte promou la inclusió en oferir una experiència accessible per a persones de totes les edats i capacitats. La implementació d'instruccions tant auditives com escrites garanteix que els usuaris, independentment de les seues habilitats físiques o cognitives, puguen gaudir de l'experiència de manera equitativa.",
     "enfoqueSAS__sostenibilidad_titulo":"Fomentem la sostenibilitat",
     "enfoqueSAS__accesibilidad_titulo":"Apostem per l'accessibilitat",
     "enfoqueSAS__smartcity_titulo":"Convertim València en una ciutat més intel·ligent",
+    "enfoqueSAS__smartcity_p1":"Aquest projecte impulsa la innovació tecnològica a València, atreient talent i empreses relacionades amb la realitat virtual, la realitat augmentada i altres tecnologies emergents. D'aquesta manera, es contribueix al desenvolupament econòmic i al posicionament de València com un centre d'innovació.",
+    "enfoqueSAS__smartcity_p2":"A través d'aquesta experiència immersiva es permet als turistes explorar les Falles des de qualsevol part del món. Això no sols promou el turisme, sinó que també pot ajudar a gestionar el flux de visitants de manera més eficient.",
     "modelos3d__titulo":"Models 3D",
     "modelos3d__descripcion":"Tots els models que apareixen en les diferents escenes han sigut modelats per l'equip per a aquest projecte.",
     "modelo3d__modelo1_titulo":"Monument Principal",
@@ -92,6 +91,31 @@
     "sobre_nosotros__titulo" : "Sobre nosaltres", 
     "sobre_nosotros__subtitulo" : "L'equip de 'Memòries en Cendra' està format per estudiants d'Enginyeria Informàtica i estudiants del Màster de Tecnologies Interactices i Fabricació Digital",
     "sobre_nosotros__informatica_descripcion":"Funcionalitat en Unity mitjançant Scripts i Desenvolupament d'aquesta 'Landing Page'", 
-    "descripcion_modelo_falla":"Esta es la falla principal del joc" 
+    "descripcion_modelo_falla":"Esta es la falla principal del joc",
+    "sobre_nosotros__informatica_titulo":"Enginyeria Informàtica",
+    "sobre_nosotros__ifab_titulo":"Tecnologies Interactives i Fabricació Digital",
+    "sobre_nosotros__joel_formacion":"Grau Superior en Desenvolupament d'Aplicacions Web, Cursant Enginyeria Informàtica UPV", 
+    "sobre_nosotros__celia_formacion":"Cursant Enginyeria Informàtica UPV",
+    "sobre_nosotros__alba_formacion":"Belles Arts, Cursant Màster en Tecnologies Interactives i Fabricació Digital",
+    "sobre_nosotros__mar_formacion":"Belles Arts, Cursant Màster en Tecnologies Interactives i Fabricació Digital", 
+    "sobre_nosotros__maria_formacion":"Belles Arts, Cursant Màster en Tecnologies Interactives i Fabricació Digital",
+    "FAQ__titulo":"Preguntes freqüents", 
+    "FAQ__subtitulo":"", 
+    "FAQ__pregunta1":"Com sorgeix la idea de crear una experiència de realitat virtual sobre les Falles?",
+    "FAQ__respuesta1":"La idea de crear una experiència de realitat virtual sobre les Falles de València sorgeix de la voluntat de preservar i promoure aquesta festivitat única en el món mitjançant la tecnologia immersiva a l'hora que es redueix l'impacte negatiu d'alguns àmbits relacionats amb la difusió d'aquesta tradició.",
+    "FAQ__pregunta2":"Quin és l'objectiu d'aquest projecte de realitat virtual?",
+    "FAQ__respuesta2":"L'objectiu principal d'aquest projecte de realitat virtual és oferir una experiència immersiva i autèntica de les Falles de València, permetent als usuaris participar de la festa, aprendre sobre ella i els processos que suposa i submergir-se en la cultura i la tradició d'aquesta celebració tan especial.",
+    "FAQ__pregunta3":"Qui pot gaudir d'aquesta experiència de realitat virtual?", 
+    "FAQ__respuesta3":"Aquesta experiència de realitat virtual està dissenyada perquè puga ser gaudida per la major quantitat de persones possibles que estiguen interessades en les Falles de València, ja siga que visquen a la ciutat, en una altra part d'Espanya o en qualsevol lloc del món. Des dels més joves fins als majors i persones amb certs problemes d'accessibilitat poden gaudir d'aquesta experiència única.",
+    "FAQ__pregunta4":"Quin és l'abast futur d'aquest projecte?", 
+    "FAQ__respuesta4":"L'abast futur d'aquest projecte inclou l'expansió de l'experiència per a abastar més aspectes de les Falles, com la inclusió de més monuments, esdeveniments i activitats relacionades i fins i tot, per què no, la recreació d'altres festes típiques. A més, es planeja seguir millorant la qualitat gràfica i la interactivitat per a oferir una experiència cada vegada més immersiva i emocionant.",
+    "FAQ__pregunta5":"S'ha planejat oferir aquesta experiència en altres llengues a més del valencià?",
+    "FAQ__respuesta5":"Sí, es té previst oferir aquesta experiència de realitat virtual en diverses llengues a més del valencià, amb la finalitat de fer-la accessible per a una audiència global i permetre que persones de diferents cultures i nacionalitats puguen gaudir de les Falles de València.",
+    "FAQ__pregunta6":"Quines mesures d'accessibilitat s'han implementat per garantir que aquesta experiència siga inclusiva per a tots els usuaris?", 
+    "FAQ__respuesta6":"S'han implementat diverses mesures d'accessibilitat com la utilització d'instruccions tant escrites com en àudio per a adaptar-se a les necessitats de diferents usuaris.",
+    "FAQ__pregunta7":"El joc ja està acabat?", 
+    "FAQ__respuesta7":"Actualment, el joc està en procés de desenvolupament i s'està treballant activament en la seua creació per a oferir una experiència d'alta qualitat que capture l'essència i la màgia de les Falles de València.",
+    "FAQ__pregunta8":"On puc accedir a aquesta experiència de realitat virtual?",
+    "FAQ__respuesta8":"Actualment el joc no está publicat ja que es troba en fase de desenvolupament" 
 
 }
