translate an add text

--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -10,7 +10,7 @@
     "home__boton" : "Más información", 
     "sobre_proyecto__titulo" : "Sobre el proyecto",
     "sobre_proyecto__descripcion" : "MEMÒRIES EN CENDRA busca acercar la historia y tradición de las fallas haciendo participe al jugador. Dentro del juego, podrá tallar, pintar, plantar y quemar la falla a la vez que aprende sobre la historia de Las Fallas", 
-    "sobre_proyecto__subtitulo":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.",
+    "sobre_proyecto__subtitulo":"A continuación podrás descubrir más detalles sobre nuestro proyecto, desde el proposito del proyecto a los diferentes roles existentes, pasando por las tecnologías utilizadas.",
     "sobre_proyecto__seccion1":"¿En que consiste?",
     "sobre_proyecto__objetivo1":"Coger el cuchillo para tallar los 'ninots'",
     "sobre_proyecto__objetivo2":"Pintar la falla con el aerógrafo",
@@ -25,12 +25,14 @@
     "sobre_proyecto__seccion2_tecnologia3_nombre":" Maya, Fusion360 y NomadSculpt: ",
     "sobre_proyecto__seccion2_tecnologia3":"Softwares de animación 3D y modelado ampliamente utilizado en la industria del entretenimiento para la creación de personajes, escenarios y efectos visuales",
     "sobre_proyecto__seccion3":"Roles en el equipo",
-    "sobre_proyecto__seccion3_descripcion":"Para la realización de este proyecto se ha combinado las habilidades de dos ámbitos distintos",
+    "sobre_proyecto__seccion3_descripcion":"Para la realización de este proyecto se ha combinado las habilidades de dos ámbitos distintos:",
     "sobre_proyecto__seccion3_desarrollo_titulo":" Ingenieria Informática: ",
     "sobre_proyecto__seccion3_desarrollo":"Centrado en la creación de scripts en Unity y desarrollo de la página web",
     "sobre_proyecto__seccion3_diseño_titulo":" Máster en Fabricación Digital y Tecnologias Interactivas: ",
     "sobre_proyecto__seccion3_diseño":"Centrado en el modelado 3D, la creación de la identidad visual y Unity",
     "sobre_proyecto__boton":"Más información",
+    "sobre_proyecto__objetivos_titulo":"Objetivos: ",
+    "sobre_proyecto__tecnologias_titulo":"Tecnologías: ",
     "enfoqueSAS__titulo":"Enfoque S.A.S: ", 
     "enfoqueSAS__subtitulo":"Sostenibilidad, Accesibilidad y SmartCity", 
     "enfoqueSAS__sostenibilidad_titulo":"Fomentamos la sostenibilidad",
