--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -10,7 +10,7 @@
     "home__boton" : "Més informació", 
     "sobre_proyecto__titulo" : "Sobre el projecte",
     "sobre_proyecto__descripcion" : "MEMÒRIES EN CENDRA busca apropar la història i tradició de les falles fent pàrticip al jugador. Dins del joc, podrá tallar, pintar, plantar i cremar la falla a la vegada que aprén sobre la història de Les Falles ", 
-    "sobre_proyecto__subtitulo":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.",
+    "sobre_proyecto__subtitulo": "A continuació podràs descobrir més detalls sobre el nostre projecte, des del propòsit del projecte als diferents rols existents, passant per les tecnologies utilitzades.",
     "sobre_proyecto__seccion1":" ¿En què consisteix?",
     "sobre_proyecto__objetivo1":" Agarrar el ganivet per a tallar els ninots",
     "sobre_proyecto__objetivo2":" Pintar la falla amb  l'aerògraf",
@@ -25,12 +25,14 @@
     "sobre_proyecto__seccion2_tecnologia3_nombre":" Maya, Fusion360 i NomadSculpt: ",
     "sobre_proyecto__seccion2_tecnologia3":"Softwares d'animació 3D i modelat ampliamente utilitzat en l'industria de l'entreteniment per a la creació de personatges, escenaris i efectes visuals",
     "sobre_proyecto__seccion3":"Rols en l'equip",
-    "sobre_proyecto__seccion3_descripcion":"Per a la realització d'aquest projecte s'han combinat les habilitats de dos àmbits diferents",
+    "sobre_proyecto__seccion3_descripcion":"Per a la realització d'aquest projecte s'han combinat les habilitats de dos àmbits diferents:",
     "sobre_proyecto__seccion3_desarrollo_titulo":" Ingeniera Informàtica: ",
     "sobre_proyecto__seccion3_desarrollo":"Centrat en la creació d'scrips en Unity i desenvolupament de la pàgina web en React",
     "sobre_proyecto__seccion3_diseño_titulo":" Máster en Fabricació Digital i Tecnologies Interactives: ",
     "sobre_proyecto__seccion3_diseño":"Centrar en el modelatge 3D, la creació de la identitat visual i Unity",
     "sobre_proyecto__boton":"Més informació", 
+    "sobre_proyecto__objetivos_titulo":"Objectius: ",
+    "sobre_proyecto__tecnologias_titulo":"Tecnologies: ",
     "enfoqueSAS__titulo":"Enfocament S.A.S: ", 
     "enfoqueSAS__subtitulo":"Sostenibilitat, Accesibilitat i SmartCity", 
     "enfoqueSAS__sostenibilidad_p1":"Aquest projecte no sols busca oferir una experiència immersiva i emocionant, sinó que també es fonamenta en principis de sostenibilitat que el fan respectuós amb el medi ambient. Gràcies a aquest projecte, s'evita la necessitat de construir elements físics per a entorns en els quals es vulga difondre la festa com ara escoles o fires de turisme, la qual cosa redueix significativament la generació de residus i el consum de recursos naturals.",
