--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -55,15 +55,21 @@
     "modelo3d__modelo7_titulo":"Atril",
     "modelo3d__modelo8_titulo":"Grupo de Cajas",
     "modelo3d__modelo9_titulo":"Carretilla",
-    "modelo3d__modelo10_titulo":"",
+    "modelo3d__modelo10_titulo":"Mando MetaQuest 2",
     "modelo3d__modelo11_titulo":"Escalera",
     "modelo3d__modelo12_titulo":"Fuente",
     "modelo3d__modelo13_titulo":"Andamio",
     "modelo3d__modelo14_titulo":"Edificio",
     "modelo3d__modelo15_titulo":"Edificio",
     "modelo3d__modelo16_titulo":"Filmoteca de Valencia",
-    "modelo3d__modelo17_titulo":"",
-    "modelo3d__modelo18_titulo":"",
+    "modelo3d__modelo17_titulo":"Valla Ayuntamiento",
+    "modelo3d__modelo18_titulo":"Tijera",
+    "modelo3d__modelo19_titulo":"Taburete",
+    "modelo3d__modelo20_titulo":"Radio",
+    "modelo3d__modelo21_titulo":"Mesas para Tallar",
+    "modelo3d__modelo22_titulo":"Cubo pintura",
+    "modelo3d__modelo23_titulo":"Rasqueta",
+    "modelo3d__modelo24_titulo":"Caja de Herramientas",
     "modelo3d__modelo1_descripcion":"Modelo 3D del Monumento Principal de la Falla creado para esta experiencia ",
     "modelo3d__modelo2_descripcion":"Modelo 3D del muñeco representativo de Codethon-Artemis Club",
     "modelo3d__modelo3_descripcion":"Modelo 3D del Ayuntamiento de Valencia",
@@ -80,8 +86,14 @@
     "modelo3d__modelo14_descripcion":"Modelo 3D de una reinterpretación de uno de los edificios de la Plaza del Ayuntamiento de Valencia",
     "modelo3d__modelo15_descripcion":"Modelo 3D de una reinterpretación de uno de los edificios de la Plaza del Ayuntamiento de Valencia",
     "modelo3d__modelo16_descripcion":"Modelo 3D de la Filmoteca de Valencia/Teatro Rialto en la Plaza del Ayuntamiento",
-    "modelo3d__modelo17_descripcion":" ",
-    "modelo3d__modelo18_descripcion":" ",
+    "modelo3d__modelo17_descripcion":"Modelo 3D de una de les vallas que existen en toda la ciudad de Valencia",
+    "modelo3d__modelo18_descripcion":"Modelo 3D de una tijera, representativa de alguna de las herramientas que pueden estar en un Taller Fallero",
+    "modelo3d__modelo19_descripcion":"Modelo 3D de un taburete, represetativo de un posible elemento en un Taller Fallero",
+    "modelo3d__modelo20_descripcion":"Modelo 3D de una radio",
+    "modelo3d__modelo21_descripcion":"Modelo 3D de una emsa donde se colocan los bloques de corcho que se tallarán para convertirlos en muñecos",
+    "modelo3d__modelo22_descripcion":"Modelo 3D de un cubo de pintura",
+    "modelo3d__modelo23_descripcion":"Modelo 3D de una rasqueta, representativa del material que puede existir en un Taller Fallero",
+    "modelo3d__modelo24_descripcion":"Modelo 3D de una caja de herramientas",
     "accesibilidad__titulo":"Accesibilidad y SmartCity",
     "accesibilidad__left_titulo":"Accesibilidad",
     "accesibilidad__right_titulo":"Valencia SmartCity",
