--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -62,8 +62,14 @@
     "modelo3d__modelo14_titulo":"Edifici",
     "modelo3d__modelo15_titulo":"Edifici",
     "modelo3d__modelo16_titulo":"Filmoteca de València",
-    "modelo3d__modelo17_titulo":"",
-    "modelo3d__modelo18_titulo":"",
+    "modelo3d__modelo17_titulo":"Tanca Ajuntament",
+    "modelo3d__modelo18_titulo":"Tisores",
+    "modelo3d__modelo19_titulo":"Taburet",
+    "modelo3d__modelo20_titulo":"Radio",
+    "modelo3d__modelo21_titulo":"Taules per a Tallar",
+    "modelo3d__modelo22_titulo":"Poal de pintura",
+    "modelo3d__modelo23_titulo":"Rasclet",
+    "modelo3d__modelo24_titulo":"Caixa d'Eines",   
     "modelo3d__modelo1_descripcion":"Model 3D del Monument Principal de la Falla creat per a aquesta experiència ",
     "modelo3d__modelo2_descripcion":"Model 3D del ninot representatiu del Codethon-Artemis Club",
     "modelo3d__modelo3_descripcion":"Model 3D de l'Ajuntament de València",
@@ -80,8 +86,14 @@
     "modelo3d__modelo14_descripcion":"Model 3D d'una reinterpretación d'un dels edificis de la Plaça de l'Ajuntament de València",
     "modelo3d__modelo15_descripcion":"Model 3D d'una reinterpretación d'un dels edificis de la Plaça de l'Ajuntament de València",
     "modelo3d__modelo16_descripcion":"Model 3D de la Filmoteca de València/Teatre Rialto en la Plaça de l'Ajuntament",
-    "modelo3d__modelo17_descripcion":"",
-    "modelo3d__modelo18_descripcion":"",
+    "modelo3d__modelo17_descripcion":"Model 3D d'una de les tanques que tenim en tota la ciutat de València",
+    "modelo3d__modelo18_descripcion":"Model 3D d'una tissora, representativa d'alguna de les ferraentes que poden estar en un Taller Faller",
+    "modelo3d__modelo19_descripcion":"Model 3D d'un taburet, represetatiu d'un possible element en un Taller Faller",
+    "modelo3d__modelo20_descripcion":"Model 3D d'una radio",
+    "modelo3d__modelo21_descripcion":"Model 3D d'una taula on es coloquen els blocs de suro que es tallaran per a convertir-los en ninots",
+    "modelo3d__modelo22_descripcion":"Model 3D d'un poal de pintura",
+    "modelo3d__modelo23_descripcion":"Model 3D d'una rasqueta, representativa del material que pot existir en un Taller Faller",
+    "modelo3d__modelo24_descripcion":"Model 3D d'una caixa de ferramentes",
     "accesibilidad__titulo":"Accessibilitat i SmartCity",
     "accesibilidad__left_titulo":"Accesibilidad",
     "accesibilidad__right_titulo":"Valencia SmartCity",
