Retocar detalles visuales y añadir iframe en about project

--- a/src/assets/langs/es.json
+++ b/src/assets/langs/es.json
@@ -27,9 +27,9 @@
     "sobre_proyecto__seccion3":"Roles en el equipo",
     "sobre_proyecto__seccion3_descripcion":"Para la realización de este proyecto se ha combinado las habilidades de dos ámbitos distintos:",
     "sobre_proyecto__seccion3_desarrollo_titulo":" Ingenieria Informática: ",
-    "sobre_proyecto__seccion3_desarrollo":"Centrado en la creación de scripts en Unity y desarrollo de la página web",
+    "sobre_proyecto__seccion3_desarrollo":"Creación de scripts en Unity y desarrollo de la página web",
     "sobre_proyecto__seccion3_diseño_titulo":" Máster en Fabricación Digital y Tecnologias Interactivas: ",
-    "sobre_proyecto__seccion3_diseño":"Centrado en el modelado 3D, la creación de la identidad visual y Unity",
+    "sobre_proyecto__seccion3_diseño":"Modelado 3D, la creación de la identidad visual y Unity",
     "sobre_proyecto__boton":"Más información",
     "sobre_proyecto__objetivos_titulo":"Objetivos: ",
     "sobre_proyecto__tecnologias_titulo":"Tecnologías: ",
