--- a/src/assets/langs/val.json
+++ b/src/assets/langs/val.json
@@ -27,9 +27,9 @@
     "sobre_proyecto__seccion3":"Rols en l'equip",
     "sobre_proyecto__seccion3_descripcion":"Per a la realització d'aquest projecte s'han combinat les habilitats de dos àmbits diferents:",
     "sobre_proyecto__seccion3_desarrollo_titulo":" Ingeniera Informàtica: ",
-    "sobre_proyecto__seccion3_desarrollo":"Centrat en la creació d'scrips en Unity i desenvolupament de la pàgina web en React",
+    "sobre_proyecto__seccion3_desarrollo":"Creació d'scrips en Unity i desenvolupament de la pàgina web en React",
     "sobre_proyecto__seccion3_diseño_titulo":" Máster en Fabricació Digital i Tecnologies Interactives: ",
-    "sobre_proyecto__seccion3_diseño":"Centrar en el modelatge 3D, la creació de la identitat visual i Unity",
+    "sobre_proyecto__seccion3_diseño":"Modelatge 3D, la creació de la identitat visual i Unity",
     "sobre_proyecto__boton":"Més informació", 
     "sobre_proyecto__objetivos_titulo":"Objectius: ",
     "sobre_proyecto__tecnologias_titulo":"Tecnologies: ",
